--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,32 @@
 @import "tailwindcss";
+
+
+@theme{
+  --container-xl:1000px;
+  --text-2xl:1.6rem;
+  --text-small:1.2rem;
+}
+
+@layer components{
+  .shadows{
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
+  }
+}
+
+@layer base{
+  html{
+    font-size: 10px;
+  }
+  body{
+    background-color: rgb(244, 244, 244);
+  }
+
+  p{
+    font-size: 1.6rem;
+  }
+  
+  h1{
+    font-size: 4.4rem;
+    font-weight: bold;
+  }
+}
